--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 
 
+
 body
 {
     margin: 0;
@@ -41,8 +42,8 @@ a{
     padding-top: 10px;
     color: white;
     background-color: #1F2937;
-    padding-left:500px ;
-    padding-right: 500px;
+    padding-left:250px ;
+    padding-right: 250px;
     display: flex;
     flex-direction: column;
 }
@@ -95,8 +96,8 @@ button{
 {
     border:5px solid #3882F6;
     border-radius: 20px;
-    height: 200px;
-    width:  200px;
+    height: 250px;
+    width:  250px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
@@ -113,6 +114,7 @@ button{
     display: flex;
     justify-content: center;
     gap: 100px;
+    flex-wrap: wrap;
 }
 
 .profiles div
@@ -121,7 +123,7 @@ button{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+   
 }
 
 .profiles div.txt 
@@ -135,8 +137,8 @@ button{
 .quote
 {
     background-color: #E5E7Eb;
-    padding-left: 500px;
-    padding-right: 500px;
+    padding-left: 250px;
+    padding-right: 250px;
     padding-top: 150px;
     padding-bottom: 150px;
 }
@@ -167,7 +169,7 @@ button{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 100px 500px;
+    margin: 100px 150px;
     padding: 50px 100px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
